parser/sample_tests/ours/matrix.txt

*** Error line 14.
    for (i = 0; i < 10; i = i + 1) {
         ^
*** syntax error

